don't use Integer constructor